--- a/.github/workflows/codestats.yml
+++ b/.github/workflows/codestats.yml
@@ -23,4 +23,4 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: ${{ secrets.GIST_ID }}
           CODE_STATS_USERNAME: Ngu2a
-          STATS_TYPE: ${{ secrets.STATS_TYPE }}
+          STATS_TYPE: level-xp
